analysis updates